assignment2/gen/D96Parser.py
# Generated from C:/Users/ADMIN/Documents/GitHub/HCMUT-PPL/assignment2/src/main/d96/parser\D96.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'Null'", "'::'", "'String'", 
                     "'New'", "'Return'", "'='", "'Break'", "'Continue'", 
                     "'If'", "'Else'", "'Elseif'", "'Foreach'", "'In'", 
                     "'Constructor'", "'Destructor'", "'Class'", "<INVALID>", 
                     "'By'", "<INVALID>", "<INVALID>", "'Array'", "'Int'", 
                     "'Float'", "'Boolean'", "<INVALID>", "'00'", "'0'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'.'", "','", 
                     "'['", "']'", "'('", "')'", "'{'", "'}'", "'..'", "':'", 
                     "';'", "'+'", "'<='", "'>='", "'-'", "'*'", "'<'", 
                     "'%'", "'/'", "'!='", "'=='", "'>'", "'&&'", "'||'", 
                     "'!'", "'==.'", "'+.'" ]

    symbolicNames = [ "<INVALID>", "STRINGLIT", "NULL", "MEM_ACCESS_OP", 
                      "STRING_TYPE", "NEW", "RETURN", "ASSIGN_OP", "BREAK", 
                      "CONTINUE", "IF", "ELSE", "ELSEIF", "FOREACH", "IN", 
                      "CONSTRUCTOR", "DESTRUCTOR", "CLASS", "FLOATLIT", 
                      "BY", "BOOLIT", "VAL_VAR", "ARRAY", "INT_TYPE", "FLOAT_TYPE", 
                      "BOOL_TYPE", "ZERO_2", "ZERO_8", "ZERO_10", "ZERO_16", 
                      "INTLIT_16", "INTLIT_2", "INTLIT_8", "INTLIT_10", 
                      "DOLLAR_ID", "ID", "DOT", "CM", "LS", "RS", "LB", 
                      "RB", "LP", "RP", "RANGE", "CL", "SEMI", "ADDOP", 
                      "LESS_EQUAL", "GREAT_EQUAL", "SUBOP", "MULOP", "LESS_THAN", 
                      "MODOP", "DIVOP", "NOT_EQUAL", "EQUAL", "GREAT_THAN", 
                      "AND", "OR", "NEGATE", "STR_CMP", "STR_CONCAT", "COMMENT", 
                      "WS", "ILLEGAL_ESCAPE", "UNCLOSED_STRING", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_class_dcl = 1
    RULE_class_body = 2
    RULE_expr_pro = 3
    RULE_att_dcl = 4
    RULE_att_dcl_list = 5
    RULE_method_dcl = 6
    RULE_method_block = 7
    RULE_para_dcl_list = 8
    RULE_para_dcl_smcllist = 9
    RULE_para_dcl = 10
    RULE_stm = 11
    RULE_for_in_stm = 12
    RULE_if_stm = 13
    RULE_block_stm = 14
    RULE_mn_stm = 15
    RULE_continue_stm = 16
    RULE_break_stm = 17
    RULE_asm_stm = 18
    RULE_return_stm = 19
    RULE_method_invoke_stm = 20
    RULE_var_dcl = 21
    RULE_var_dcl_list = 22
    RULE_expr_pro_list = 23
    RULE_expr_pro_cmlist = 24
    RULE_expr = 25
    RULE_expr_lit = 26
    RULE_object_ini = 27
    RULE_instance_method_invoke = 28
    RULE_static_mehod_invoke = 29
    RULE_para_pass_list = 30
    RULE_att_access = 31
    RULE_instance_att_access = 32
    RULE_static_att_access = 33
    RULE_index_ele_pro = 34
    RULE_index_ele = 35
    RULE_expr_list = 36
    RULE_int_object = 37
    RULE_float_object = 38
    RULE_index_arr_list = 39
    RULE_index_arr_cmlist = 40
    RULE_index_arr = 41
    RULE_mul_dim_arr = 42
    RULE_same_type_list = 43
    RULE_string_op = 44
    RULE_bool_op = 45
    RULE_relation_op = 46
    RULE_int_op = 47
    RULE_float_op = 48
    RULE_lit_list = 49
    RULE_lit_cmlist = 50
    RULE_non_static_id_list = 51
    RULE_non_static_id_cmlist = 52
    RULE_id_list = 53
    RULE_id_cmlist = 54
    RULE_int_gen_list = 55
    RULE_int_gen_cm = 56
    RULE_bool_list = 57
    RULE_bool_list_cm = 58
    RULE_float_list = 59
    RULE_float_list_cm = 60
    RULE_string_list = 61
    RULE_string_list_cm = 62
    RULE_lit = 63
    RULE_int_gen = 64
    RULE_data_type = 65
    RULE_size = 66
    RULE_array_type = 67
    RULE_unary_op = 68
    RULE_binary_op = 69
    RULE_zero = 70

    ruleNames =  [ "program", "class_dcl", "class_body", "expr_pro", "att_dcl", 
                   "att_dcl_list", "method_dcl", "method_block", "para_dcl_list", 
                   "para_dcl_smcllist", "para_dcl", "stm", "for_in_stm", 
                   "if_stm", "block_stm", "mn_stm", "continue_stm", "break_stm", 
                   "asm_stm", "return_stm", "method_invoke_stm", "var_dcl", 
                   "var_dcl_list", "expr_pro_list", "expr_pro_cmlist", "expr", 
                   "expr_lit", "object_ini", "instance_method_invoke", "static_mehod_invoke", 
                   "para_pass_list", "att_access", "instance_att_access", 
                   "static_att_access", "index_ele_pro", "index_ele", "expr_list", 
                   "int_object", "float_object", "index_arr_list", "index_arr_cmlist", 
                   "index_arr", "mul_dim_arr", "same_type_list", "string_op", 
                   "bool_op", "relation_op", "int_op", "float_op", "lit_list", 
                   "lit_cmlist", "non_static_id_list", "non_static_id_cmlist", 
                   "id_list", "id_cmlist", "int_gen_list", "int_gen_cm", 
                   "bool_list", "bool_list_cm", "float_list", "float_list_cm", 
                   "string_list", "string_list_cm", "lit", "int_gen", "data_type", 
                   "size", "array_type", "unary_op", "binary_op", "zero" ]

    EOF = Token.EOF
    STRINGLIT=1
    NULL=2
    MEM_ACCESS_OP=3
    STRING_TYPE=4
    NEW=5
    RETURN=6
    ASSIGN_OP=7
    BREAK=8
    CONTINUE=9
    IF=10
    ELSE=11
    ELSEIF=12
    FOREACH=13
    IN=14
    CONSTRUCTOR=15
    DESTRUCTOR=16
    CLASS=17
    FLOATLIT=18
    BY=19
    BOOLIT=20
    VAL_VAR=21
    ARRAY=22
    INT_TYPE=23
    FLOAT_TYPE=24
    BOOL_TYPE=25
    ZERO_2=26
    ZERO_8=27
    ZERO_10=28
    ZERO_16=29
    INTLIT_16=30
    INTLIT_2=31
    INTLIT_8=32
    INTLIT_10=33
    DOLLAR_ID=34
    ID=35
    DOT=36
    CM=37
    LS=38
    RS=39
    LB=40
    RB=41
    LP=42
    RP=43
    RANGE=44
    CL=45
    SEMI=46
    ADDOP=47
    LESS_EQUAL=48
    GREAT_EQUAL=49
    SUBOP=50
    MULOP=51
    LESS_THAN=52
    MODOP=53
    DIVOP=54
    NOT_EQUAL=55
    EQUAL=56
    GREAT_THAN=57
    AND=58
    OR=59
    NEGATE=60
    STR_CMP=61
    STR_CONCAT=62
    COMMENT=63
    WS=64
    ILLEGAL_ESCAPE=65
    UNCLOSED_STRING=66
    ERROR_CHAR=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def class_dcl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Class_dclContext)
            else:
                return self.getTypedRuleContext(D96Parser.Class_dclContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 142
                self.class_dcl()
                self.state = 145 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

            self.state = 147
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_dclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def class_body(self):
            return self.getTypedRuleContext(D96Parser.Class_bodyContext,0)


        def CL(self):
            return self.getToken(D96Parser.CL, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_class_dcl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_dcl" ):
                listener.enterClass_dcl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_dcl" ):
                listener.exitClass_dcl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_dcl" ):
                return visitor.visitClass_dcl(self)
            else:
                return visitor.visitChildren(self)




    def class_dcl(self):

        localctx = D96Parser.Class_dclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_dcl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(D96Parser.CLASS)
            self.state = 150
            self.match(D96Parser.ID)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.CL:
                self.state = 151
                self.match(D96Parser.CL)
                self.state = 152
                self.match(D96Parser.ID)


            self.state = 155
            self.class_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def att_dcl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Att_dclContext)
            else:
                return self.getTypedRuleContext(D96Parser.Att_dclContext,i)


        def method_dcl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Method_dclContext)
            else:
                return self.getTypedRuleContext(D96Parser.Method_dclContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_class_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_body" ):
                listener.enterClass_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_body" ):
                listener.exitClass_body(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_body" ):
                return visitor.visitClass_body(self)
            else:
                return visitor.visitChildren(self)




    def class_body(self):

        localctx = D96Parser.Class_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(D96Parser.LP)
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.CONSTRUCTOR) | (1 << D96Parser.DESTRUCTOR) | (1 << D96Parser.VAL_VAR) | (1 << D96Parser.DOLLAR_ID) | (1 << D96Parser.ID))) != 0):
                self.state = 160
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [D96Parser.VAL_VAR]:
                    self.state = 158
                    self.att_dcl()
                    pass
                elif token in [D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.DOLLAR_ID, D96Parser.ID]:
                    self.state = 159
                    self.method_dcl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 165
            self.match(D96Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_proContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(D96Parser.ExprContext,0)


        def index_ele(self):
            return self.getTypedRuleContext(D96Parser.Index_eleContext,0)


        def index_ele_pro(self):
            return self.getTypedRuleContext(D96Parser.Index_ele_proContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_expr_pro

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_pro" ):
                listener.enterExpr_pro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_pro" ):
                listener.exitExpr_pro(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_pro" ):
                return visitor.visitExpr_pro(self)
            else:
                return visitor.visitChildren(self)




    def expr_pro(self):

        localctx = D96Parser.Expr_proContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expr_pro)
        try:
            self.state = 170
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 168
                self.index_ele()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 169
                self.index_ele_pro()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Att_dclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAL_VAR(self):
            return self.getToken(D96Parser.VAL_VAR, 0)

        def id_list(self):
            return self.getTypedRuleContext(D96Parser.Id_listContext,0)


        def CL(self):
            return self.getToken(D96Parser.CL, 0)

        def data_type(self):
            return self.getTypedRuleContext(D96Parser.Data_typeContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def att_dcl_list(self):
            return self.getTypedRuleContext(D96Parser.Att_dcl_listContext,0)


        def expr_pro(self):
            return self.getTypedRuleContext(D96Parser.Expr_proContext,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def DOLLAR_ID(self):
            return self.getToken(D96Parser.DOLLAR_ID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_att_dcl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtt_dcl" ):
                listener.enterAtt_dcl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtt_dcl" ):
                listener.exitAtt_dcl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtt_dcl" ):
                return visitor.visitAtt_dcl(self)
            else:
                return visitor.visitChildren(self)




    def att_dcl(self):

        localctx = D96Parser.Att_dclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_att_dcl)
        self._la = 0 # Token type
        try:
            self.state = 184
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 172
                self.match(D96Parser.VAL_VAR)
                self.state = 173
                self.id_list()
                self.state = 174
                self.match(D96Parser.CL)
                self.state = 175
                self.data_type()
                self.state = 176
                self.match(D96Parser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 178
                self.match(D96Parser.VAL_VAR)
                self.state = 179
                _la = self._input.LA(1)
                if not(_la==D96Parser.DOLLAR_ID or _la==D96Parser.ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 180
                self.att_dcl_list()
                self.state = 181
                self.expr_pro()
                self.state = 182
                self.match(D96Parser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Att_dcl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CL(self):
            return self.getToken(D96Parser.CL, 0)

        def data_type(self):
            return self.getTypedRuleContext(D96Parser.Data_typeContext,0)


        def ASSIGN_OP(self):
            return self.getToken(D96Parser.ASSIGN_OP, 0)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.CM)
            else:
                return self.getToken(D96Parser.CM, i)

        def att_dcl_list(self):
            return self.getTypedRuleContext(D96Parser.Att_dcl_listContext,0)


        def expr_pro(self):
            return self.getTypedRuleContext(D96Parser.Expr_proContext,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def DOLLAR_ID(self):
            return self.getToken(D96Parser.DOLLAR_ID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_att_dcl_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtt_dcl_list" ):
                listener.enterAtt_dcl_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtt_dcl_list" ):
                listener.exitAtt_dcl_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtt_dcl_list" ):
                return visitor.visitAtt_dcl_list(self)
            else:
                return visitor.visitChildren(self)




    def att_dcl_list(self):

        localctx = D96Parser.Att_dcl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_att_dcl_list)
        self._la = 0 # Token type
        try:
            self.state = 196
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.CL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 186
                self.match(D96Parser.CL)
                self.state = 187
                self.data_type()
                self.state = 188
                self.match(D96Parser.ASSIGN_OP)
                pass
            elif token in [D96Parser.CM]:
                self.enterOuterAlt(localctx, 2)
                self.state = 190
                self.match(D96Parser.CM)
                self.state = 191
                _la = self._input.LA(1)
                if not(_la==D96Parser.DOLLAR_ID or _la==D96Parser.ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 192
                self.att_dcl_list()
                self.state = 193
                self.expr_pro()
                self.state = 194
                self.match(D96Parser.CM)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

